TEST-22-TMPFILES: adapt for openQA

--- a/test/TEST-22-TMPFILES/testsuite.service
+++ b/test/TEST-22-TMPFILES/testsuite.service
@@ -8,5 +8,5 @@ Wants=getty-pre.target
 WorkingDirectory=/testsuite
 ExecStart=/testsuite/run-tmpfiles-tests.sh
 Type=oneshot
-StandardOutput=tty
-StandardError=tty
+StandardOutput=kmsg
+StandardError=kmsg
